--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -59,7 +59,7 @@
         sapiente ducimus architecto nulla voluptate dolorum nihil cupiditate eveniet.
         Cumque ex facere unde vitae iste ea dignissimos veritatis impedit dolores reiciendis?</p></alt>
         </div>
-<section id="spotlight">
+<section id="landing-spotlight">
 <table>
     <tbody>
         <tr>
@@ -103,7 +103,7 @@
     </tbody>
 </table>
 </section>
-<section id="about-us">
+<section id="landing-about-us">
     <h2>About us</h2>
     <p><h3>Confidentiality agreements</h3></p>
     <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDoixtLy-ItMGqrytvDksn0i9OTgIYOsL_X_RhDA87NlCUQ5ke4QQAQ3ZYBoOzcvPKqpc&usqp=CAU" alt=""></p>
@@ -142,7 +142,7 @@
 </div>
     </form>
 </section>
-<section class="bottom-table">
+<section id="landing-bottom-table">
 <table>
     <tbody>
         <tr>
@@ -177,7 +177,7 @@
 </main>
 <footer>
     <div id="footer">
-    <section>
+    <section id="social-media">
         <td><a href="linkedin"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpEP6_ZqUdItJUMNAiUfH-ytlPuseYnOrLhNp8lPl6ViB_O1-Tz4n3jwbPlVkirF3Y3QU&usqp=CAU" alt=""/></a>
         <td><a href="twitter"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS73k3dFT_EfG0rqnbaKS2PxNOc1YjJjVWnY6-IaeAW9z2ITGbY1RQXqG9WhJAtgSgdsg0&usqp=CAU" alt=""/></a>
         <td><a href="facebook"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBZKT7Yleym993SA5GMZxdYhwHwV09j8f9yUP1NZKIBduaz9Mogz77BYsLnht0-0xHnI0&usqp=CAU" alt=""/></a>
