BaSP-2022: CSS and HTML fixes

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -50,7 +50,7 @@
     <button type="button" class="sidebar-btn">Get system information</button>
 </aside>
 <main>
-<div id="body">
+<div id="main">
 <div id="logo">
     <span><img src="https://cdn.worldvectorlogo.com/logos/tether.svg" alt=""></span>
     <h1>Trackgenix</h1>
