BaSP-2022: HTML cleaning and further Flexbox testing

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -41,10 +41,10 @@
                                 <a href="#history">History</a>
                             </li>
                             <li>
-                                <a href="#about us">About Us</a>
+                                <a href="#about-us">About Us</a>
                             </li>
                             <li>
-                                <a href="#contact from">Contact Form</a>
+                                <a href="#contact-from">Contact Form</a>
                             </li>
                             <li>
                                 <a href="#sources">Sources</a>
@@ -193,12 +193,12 @@
                 </div>
             </section>
             <section id="landing-get-system-information">
-                <div class="container system-information">    
-                    <div> 
-                        <h3>Get system information</h3>
-                    </div>
-                    <div>   
-                        <form>
+                <div> 
+                    <h3>Get system information</h3>
+                </div>
+                <div class="container system-information">
+                    <form>
+                        <div>
                             <label>First Name:</label>
                             <input type="text" name="firstName" placeholder="Click here to enter your name">
                             <label>Email:</label>
@@ -210,10 +210,12 @@
                                 <option value="Commercial">Commercial department</option>
                                 <option value="Others">Others</option>
                             </select>
+                        </div>
+                        <div>
                             <textarea name="message" placeholder="Click here to enter your message"></textarea>
                             <input type="submit" value="Submit">
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </section>
         </main>
