--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -7,6 +7,7 @@
         <title>Trackgenix | Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/reset.css">
         <link rel="stylesheet" type="text/css" href="CSS/style.css">
+        <link rel="icon" href="../images/favicon.ico">
     </head>
     <body>
         <header aria-label="Header">
