BaSP-2022: Minor aesthetic fixes

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -203,8 +203,8 @@
                 <hr>
                 <form aria-label="Form">
                     <div class="form-left" aria-label="Mandatory fields">
-                        <label>First Name:</label>
-                        <input type="text" name="firstName" placeholder="Click here to enter your name">
+                        <label>Full Name:</label>
+                        <input type="text" name="fullName" placeholder="Click here to enter your name">
                         <label>Email:</label>
                         <input type="email" name="email" placeholder="Click here to enter your Email">
                         <label>Select contact area:</label>
