BaSP-2022: Tablet - MVP

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -101,73 +101,75 @@
                     leo justo accumsan neque.
                 </p>
             </article>
-            <section class="container spotlight" aria-label="Spotlight">
-                <figure aria-label="Simplicity">
-                    <a href="/simplicity">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAX2oFaMgZKemCsI4JQpP0Ci6xnxByif6hU6y6-peVJWTiiFJ_62dN5f6Og_A-XDs0eFA&usqp=CAU" alt="Visit article">
-                        <figcaption aria-hidden="true">Simplicity</figcaption>
-                    </a>
-                </figure>
-                <figure aria-label="Efficiency">
-                    <a href="/efficiency">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR4eO2rmCp1zheX2tdHtABQGSe2A0lK6OpbT_vIJUIr_GCQR_GhEQOy56whal0501XbXc&usqp=CAU" alt="Visit article">
-                    <figcaption aria-hidden="true">Efficiency</figcaption>
-                    </a>
-                </figure>
-                <figure aria-label="Tracking">
-                    <a href="/tracking">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBABTulSaXadjzHNPzKu6OuQp5g4y77EBCzYpdjZ-4TdGt06MWhV-HeqVAdFVnvf1gBVw&usqp=CAU" alt="Visit article">
-                    <figcaption aria-hidden="true">Tracking</figcaption>
-                    </a>
-                </figure>
-                <figure aria-label="Confidence">
-                    <a href="/confidence">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNjlcnhnQTV7An7oXIe1HgO9FP3tfNX5EGj26M8OlEeyMVDk7GV3P38-vk_10spTiU4P0&usqp=CAU" alt="Visit article">
-                    <figcaption aria-hidden="true">Confidence</figcaption>
-                    </a>
-                </figure>
-                <figure aria-label="Management">
-                    <a href="/management">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbEOR29j9IHs92B5cQX1gqvI-0jGED6jDcdDVewpE3LbPR_YmRjpJWbRWKyFTEcCRvYMY&usqp=CAU" alt="Visit article">
-                    <figcaption aria-hidden="true">Management</figcaption>
-                    </a>
-                </figure>
-            </section>
-            <section class="container know-more" aria-label="Know more">
-                <div class="list" aria-label="What can Trackgenix do for you?">
-                    <h4 aria-hidden="true">What can Trackgenix do for you?</h4>
-                    <ol>
-                        <li>
-                            <a href="/time-registration" alt="Visit article">Time registration</a>
-                        </li>
-                        <li>
-                            <a href="/reports" alt="Visit article">Reports</a>
-                        </li>
-                        <li>
-                            <a href="/resource-management" alt="Visit article">Resource management</a>
-                        </li>
-                        <li>
-                            <a href="/assign-roles" alt="Visit article">Assign roles</a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="list" aria-label="Why choose Trackgenix is a quality leap?">
-                    <h4 aria-hidden="true">Why choose Trackgenix is a quality leap?</h4>
-                    <ol>
-                        <li>
-                            <a href="/increase-productivity" alt="Visit article">Increase productivity</a>
-                        </li>
-                        <li>
-                            <a href="/optimize-leadership" alt="Visit article">Optimize leadership and team management</a>
-                        </li>
-                        <li>
-                            <a href="/facilitate-traceability" alt="Visit article">Facilitate traceability</a>
-                        </li>
-                        <li>
-                            <a href="/improve-decision-making" alt="Visit article">Improve decision making</a>
-                        </li>
-                    </ol>
-                </div>
+            <section class="tablet-content">
+                <section class="container spotlight" aria-label="Spotlight">
+                    <figure aria-label="Simplicity">
+                        <a href="/simplicity">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAX2oFaMgZKemCsI4JQpP0Ci6xnxByif6hU6y6-peVJWTiiFJ_62dN5f6Og_A-XDs0eFA&usqp=CAU" alt="Visit article">
+                            <figcaption aria-hidden="true">Simplicity</figcaption>
+                        </a>
+                    </figure>
+                    <figure aria-label="Efficiency">
+                        <a href="/efficiency">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR4eO2rmCp1zheX2tdHtABQGSe2A0lK6OpbT_vIJUIr_GCQR_GhEQOy56whal0501XbXc&usqp=CAU" alt="Visit article">
+                        <figcaption aria-hidden="true">Efficiency</figcaption>
+                        </a>
+                    </figure>
+                    <figure aria-label="Tracking">
+                        <a href="/tracking">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBABTulSaXadjzHNPzKu6OuQp5g4y77EBCzYpdjZ-4TdGt06MWhV-HeqVAdFVnvf1gBVw&usqp=CAU" alt="Visit article">
+                        <figcaption aria-hidden="true">Tracking</figcaption>
+                        </a>
+                    </figure>
+                    <figure aria-label="Confidence">
+                        <a href="/confidence">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNjlcnhnQTV7An7oXIe1HgO9FP3tfNX5EGj26M8OlEeyMVDk7GV3P38-vk_10spTiU4P0&usqp=CAU" alt="Visit article">
+                        <figcaption aria-hidden="true">Confidence</figcaption>
+                        </a>
+                    </figure>
+                    <figure aria-label="Management">
+                        <a href="/management">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbEOR29j9IHs92B5cQX1gqvI-0jGED6jDcdDVewpE3LbPR_YmRjpJWbRWKyFTEcCRvYMY&usqp=CAU" alt="Visit article">
+                        <figcaption aria-hidden="true">Management</figcaption>
+                        </a>
+                    </figure>
+                </section>
+                <section class="container know-more" aria-label="Know more">
+                    <div class="list" aria-label="What can Trackgenix do for you?">
+                        <h4 aria-hidden="true">What can Trackgenix do for you?</h4>
+                        <ol>
+                            <li>
+                                <a href="/time-registration" alt="Visit article">Time registration</a>
+                            </li>
+                            <li>
+                                <a href="/reports" alt="Visit article">Reports</a>
+                            </li>
+                            <li>
+                                <a href="/resource-management" alt="Visit article">Resource management</a>
+                            </li>
+                            <li>
+                                <a href="/assign-roles" alt="Visit article">Assign roles</a>
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="list" aria-label="Why choose Trackgenix is a quality leap?">
+                        <h4 aria-hidden="true">Why choose Trackgenix is a quality leap?</h4>
+                        <ol>
+                            <li>
+                                <a href="/increase-productivity" alt="Visit article">Increase productivity</a>
+                            </li>
+                            <li>
+                                <a href="/optimize-leadership" alt="Visit article">Optimize leadership and team management</a>
+                            </li>
+                            <li>
+                                <a href="/facilitate-traceability" alt="Visit article">Facilitate traceability</a>
+                            </li>
+                            <li>
+                                <a href="/improve-decision-making" alt="Visit article">Improve decision making</a>
+                            </li>
+                        </ol>
+                    </div>
+                </section>
             </section>
             <section class="container about-us" aria-label="About us">
                 <div aria-hidden="true">
