--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -7,6 +7,9 @@
         <title>Trackgenix | Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/reset.css">
         <link rel="stylesheet" type="text/css" href="CSS/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
         <link rel="icon" href="../images/favicon.ico">
     </head>
     <body>
