--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -155,8 +155,8 @@
                             </li>
                         </ol>
                     </div>
-                    <div class="list" aria-label="Why choose Trackgenix is a quality leap?">
-                        <h4 aria-hidden="true">Why choose Trackgenix is a quality leap?</h4>
+                    <div class="list" aria-label="Why choosing Trackgenix is a quality leap?">
+                        <h4 aria-hidden="true">Why choosing Trackgenix is a quality leap?</h4>
                         <ol>
                             <li>
                                 <a href="/increase-productivity" alt="Visit article">Increase productivity</a>
@@ -207,9 +207,9 @@
                 <form aria-label="Form">
                     <div class="form-left" aria-label="Mandatory fields">
                         <label>Full Name:</label>
-                        <input type="text" name="fullName" placeholder="Click here to enter your name">
+                        <input required type="text" name="fullName" placeholder="Click here to enter your name">
                         <label>Email:</label>
-                        <input type="email" name="email" placeholder="Click here to enter your Email">
+                        <input required type="email" name="email" placeholder="Click here to enter your Email">
                         <label>Select contact area:</label>
                         <select required>
                             <option value="">Select area</option>
@@ -220,7 +220,7 @@
                         </select>
                     </div>
                     <div class="form-right" aria-label="Enter message and submit">
-                        <textarea name="message" placeholder="Click here to enter your message"></textarea>
+                        <textarea required name="message" placeholder="Click here to enter your message"></textarea>
                         <input type="submit" value="Submit">
                     </div>
                 </form>
