--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -18,9 +18,7 @@
                 <input type="image" src="../images/burguer-button.png" alt="open menu"/>
             </div>
             <nav aria-label="Navigation">
-                <a href="/tutorials">Tutorials</a>
-                <text aria-hidden="true">|</text>
-                <a href="/contact">Contact</a>
+                <a href="/tutorials">Tutorials</a>&nbsp;|&nbsp;<a href="/contact">Contact</a>
             </nav>
             <form class="search-bar" aria-label="Search">
                 <input type="text" placeholder="Search" class="search-field" aria-label="Search bar">
