--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trackgenix | Home</title>
         <link rel="stylesheet" type="text/css" href="CSS/reset.css">
-        <link rel="stylesheet" type="text/css" href="CSS/style.css">
+        <link rel="stylesheet" type="text/css" href="CSS/header.css">
+        <link rel="stylesheet" type="text/css" href="CSS/aside.css">
+        <link rel="stylesheet" type="text/css" href="CSS/main.css">
+        <link rel="stylesheet" type="text/css" href="CSS/footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
@@ -180,21 +183,21 @@
                 <div aria-label="Confidentiality agreements">
                     <img src="../images/about-us-1.jpg" alt="" class="about-us-img1">
                     <p>
-                        Donec sed varius sapien. Cras aliquam est laoreet, porttitor eros facilisis, cursus sapien. 
-                        Cras viverra rutrum leo quis feugiat. Fusce porta vehicula massa, sed porta felis. Donec id metus purus. 
-                        Etiam sagittis, lorem quis sagittis finibus, purus nulla interdum purus, eu sollicitudin leo nunc vel lorem. 
+                        Donec sed varius sapien. Cras aliquam est laoreet, porttitor eros facilisis, cursus sapien.
+                        Cras viverra rutrum leo quis feugiat. Fusce porta vehicula massa, sed porta felis. Donec id metus purus.
+                        Etiam sagittis, lorem quis sagittis finibus, purus nulla interdum purus, eu sollicitudin leo nunc vel lorem.
                         Cras ut urna aliquet, vestibulum velit ac, pretium libero.
                     </p>
                 </div>
                 <div aria-label="Continuation">
                     <img src="../images/about-us-2.jpg" alt="" class="about-us-img2">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dictum bibendum rutrum. 
-                        Pellentesque porttitor sodales ipsum, quis iaculis ante ornare sed. Duis bibendum, 
-                        metus ac sagittis suscipit, purus augue lobortis nunc, non eleifend ipsum leo quis leo. 
-                        Integer suscipit ullamcorper lacus eu ultricies. Duis ut erat in nibh pellentesque elementum. 
-                        Ut ac vestibulum mauris. Sed ultrices viverra ante a tempor. Fusce quis egestas lacus, 
-                        eget vehicula ex. Sed ultricies a libero eu pretium. Nulla ultrices aliquam mauris, 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dictum bibendum rutrum.
+                        Pellentesque porttitor sodales ipsum, quis iaculis ante ornare sed. Duis bibendum,
+                        metus ac sagittis suscipit, purus augue lobortis nunc, non eleifend ipsum leo quis leo.
+                        Integer suscipit ullamcorper lacus eu ultricies. Duis ut erat in nibh pellentesque elementum.
+                        Ut ac vestibulum mauris. Sed ultrices viverra ante a tempor. Fusce quis egestas lacus,
+                        eget vehicula ex. Sed ultricies a libero eu pretium. Nulla ultrices aliquam mauris,
                         ac condimentum justo. 
                     </p>
                 </div>
@@ -279,7 +282,7 @@
                 </ol>
             </div>
         </section>
-        <footer aria-label="Footer">     
+        <footer aria-label="Footer">
             <div class="container social-media" aria-label="Our social media">
                 <a href="https://www.linkedin.com/trackgenix" target="_blank"><img src="../images/linkedin-logo.svg" alt="visit our linkedin"/></a>
                 <a href="https://www.twitter.com/trackgenix" target="_blank"><img src="../images/twitter-logo.svg" alt="visit our twitter"/></a>
@@ -289,12 +292,12 @@
             </div>
             <div class="footer-address" aria-label="Copyright">
                 <address>
-                        <p>
-                            Montevideo, Uruguay
-                        </p>
-                        <p>
-                            Copyright 2022 Radium Rocket. All rights reserved.
-                        </p>
+                    <p>
+                        Montevideo, Uruguay
+                    </p>
+                    <p>
+                        Copyright 2022 Radium Rocket. All rights reserved.
+                    </p>
                 </address>
             </div>
         </footer>
